# AI-Incident-Resolver

./: .gitignore  README.md  dev-new.bat  dev.bat  dev.ps1  docker-compose.yaml  entitlement-sse.py  start-collector.bat  start-collector.ps1  test_mcp_connection.py  test_mcp_data_flow.ps1  test_realtime_flow.py
.cursor/: mcp.json
base-mcp-server/: CHANGES.md  MIGRATION_GUIDE.md  PRODUCT_SERVICE_GUIDE.md  README.md  SETUP.md  entitlement-stdio.py  env.example  pyproject.toml  requirements.txt  test_product_tools.py
docs/: internal-architecture.md  internal-architecture.mmd
github-mcp-server/: README.md
mcp-server/: README.md  file_watcher.py  instructions.txt  otlp_receiver.py  pyproject.toml  requirements.txt  server.py  telemetry_store.py
order-service/: pom.xml
order-service/src/main/java/com/example/order/: Order.java  OrderController.java  OrderRequest.java  OrderService.java
otel-collector/: otel-collector-config.yaml
payment-service/: pom.xml
payment-service/src/main/java/com/example/payment/: Payment.java  PaymentController.java  PaymentRequest.java  PaymentService.java
payment-service/src/main/resources/: application.properties
telemetry/: logs.jsonl  metrics.jsonl  traces.jsonl
