[project]
name = "otel-mcp-server"
version = "0.1.0"
description = "MCP server that exposes OpenTelemetry data to Cursor AI for incident analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "grpcio>=1.60.0",
    "opentelemetry-proto>=1.20.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
